--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta charset="utf-8">
         <title>Photo Gallery</title>
-        <link href="style.css">
+        <link href="style.css" rel="stylesheet" type="text/css">
     </head>
 
     <body>
@@ -13,15 +13,15 @@
         </header>
         <!-- GALLERY -->
         <div class="gallery">
-            <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/1.jpg">
-            <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/2.jpg">
-            <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/3.jpg">
-            <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/4.jpg">
-            <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/5.jpg">
-            <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/6.jpg">
-            <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/7.jpg">
-            <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/8.jpg">
-            <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/9.jpg">
+            <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/1.jpg" alt="sleeping">
+            <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/2.jpg" alt="laying on back">
+            <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/3.jpg" alt="looking down">
+            <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/4.jpg" alt="under covers">
+            <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/5.jpg" alt="white kitten">
+            <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/6.jpg" alt="two kittens">
+            <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/7.jpg" alt="hiding">
+            <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/8.jpg" alt="orange kitten">
+            <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/9.jpg" alt="best friends">
             
         </div>
     </body>
